# spiky-os

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: check.yaml  test.yaml
arch/: Cargo.toml
arch/macros/: Cargo.toml
arch/macros/src/: lib.rs
arch/src/: lib.rs
arch/src/amd64/: entry.rs  idt.rs  mod.rs  paging.rs
arch/src/amd64/devices/: acpi.rs  display.rs
arch/src/amd64/interrupts/: exception.rs  mod.rs
arch/src/amd64/memory/: bump.rs  mod.rs
arch/src/framebuffer/: color.rs  mod.rs
arch/src/heap/: mod.rs
arch/src/logger/: mod.rs
fonts/: roboto-mono-bitmap.txt
kernel/: Cargo.toml  build.rs
kernel/src/: debug.rs  gdt.rs  idt.rs  lib.rs  logger.rs  main.rs  paging.rs  prelude.rs
kernel/src/asm/: trampoline.asm
kernel/src/devices/: acpi.rs  cpu.rs  display.rs  io_apic.rs  ioapic.rs  lapic.rs  local_apic.rs  mod.rs  pic.rs  rtc.rs  serial.rs
kernel/src/devices/acpi/: mod.rs
kernel/src/devices/framebuffer/: geometry.rs  mod.rs
kernel/src/drivers/: keyboard.rs  mod.rs
kernel/src/drivers/framebuffer/: color.rs  geometry.rs  mod.rs
kernel/src/drivers/keyboard/: mod.rs
kernel/src/drivers/uart/: mod.rs
kernel/src/framebuffer/: color.rs  fonts.rs  mod.rs  printer.rs  writer.rs
kernel/src/gdt/: mod.rs
kernel/src/idt/: exceptions.rs  irq.rs  mod.rs
kernel/src/interrupts/: exception.rs  exceptions.rs  irq.rs  mod.rs
kernel/src/logger/: display.rs  font.rs  mod.rs  serial.rs
kernel/src/memory/: bump.rs  frame_allocator.rs  heap.rs  mapper.rs  mod.rs
kernel/src/old_devices/: lapic.rs  mod.rs
src/: main.rs
