[package]
name = "spiky-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["kernel"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = "0.11.3"
bootloader-boot-config = "0.11.3"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
