[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9.4"
macros = { path = "macros"}

bootloader_api = { git = "https://github.com/rust-osdev/bootloader", package = "bootloader_api"}
x86 = "0.52.0"
x86_64 = "0.14.10"
slab_allocator_rs = "1.0.2"
acpi = "4.1.1"
