[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kernel"
test = false

[dependencies]
arch = { path = "../arch" }
spin = "0.9.4"
log = "0.4.17"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
