[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kernel"
test = false

[dependencies]
spin = "0.9.4"
log = "0.4.17"
bootloader_api = "0.11.2"
x86 = "0.52.0"
x86_64 = "0.14.10"
slab_allocator_rs = "1.0.2"
acpi = "4.1.1"
bit = "0.1.1"
x2apic = "0.4.2"
raw-cpuid = "10.6.1"
pic8259 = "0.10.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
